scribble-cli/src/test/resources/bad/syntax/disamb/recvarnode/Recursion01a.scr
module bad.syntax.disamb.recvarnode.Recursion01a;


global protocol Recursion1a(role A, role B)
{
	//rec A { }  // Currently OK. Disallow?

	rec X
	{
		l1() from A to B;
		//continue X;
		continue Y;  // Uncomment bad, even if above line is commented
		//l2() from A to B;  // Uncomment bad
	}
}

